Further fix for spacing issue from last commit

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -503,13 +503,7 @@ footer a:hover {
 #about .image-col {
     width: 80%;
     max-width: 450px;
-    padding: 40px;
-}
-
-@media only screen and (max-width: 750px) {
-    #about .text-col {
-    padding-bottom: 40px;
-    }
+    margin: auto;
 }
 
 #map {
@@ -532,6 +526,12 @@ footer a:hover {
     margin: 5px 0;
 }
 
+@media only screen and (max-width: 750px) {
+    #about .text-col {
+    padding-bottom: 40px;
+    }
+}
+
 @media only screen and (min-width: 750px) {
     .banner {
         height: 75vh;
@@ -541,6 +541,7 @@ footer a:hover {
         justify-self: end;
         align-self: center;
         transform: rotate(350deg);
+        padding: 20px;
     }
 
     #about .two-col {
